fixed mobile number on mobile chrome styling (#83)

--- a/addon/styles/partials/_uni-mobile-number.scss
+++ b/addon/styles/partials/_uni-mobile-number.scss
@@ -7,9 +7,26 @@
   }
 
   .uni-select {
+    position: relative;
+    width: 100%;
     max-width: 275px;
     border-right: 0;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+  }
+
+  @include breakpoint(small) {
+    &__wrapper {
+      &:before,
+      &:after {
+        z-index: 10;
+      }
+    }
+
+    & > div,
+    input {
+      width: 100px;
+      max-width: 50%;
+    }
   }
 }
